# DPDK-WiFi

./: README.md  meson.build
app/: Makefile  meson.build
app/test-ath10k/: meson.build  test-ath10k.c
app/test-pmd/: meson.build
buildtools/pmdinfogen/: meson.build
config/: meson.build
doc/guides/contributing/: coding_style.rst
drivers/: meson.build
drivers/bus/pci/: meson.build
drivers/crypto/: meson.build
drivers/crypto/null/: meson.build
drivers/crypto/openssl/: meson.build
drivers/event/skeleton/: meson.build
drivers/event/sw/: meson.build
drivers/net/: meson.build
drivers/net/ath10k/: Makefile  ath10k_ethdev.c  ath10k_ethdev.h  meson.build  rte_pmd_ath10k_version.map
drivers/net/ath10k/base/: ath10k_osdep.c  ath10k_osdep.h  bmi.c  bmi.h  ce.c  ce.h  core.c  core.h  debug.c  debug.h  dma.c  dma.h  firmware.c  firmware.h  hif.h  htc.c  htc.h  htt.c  htt.h  htt_rx.c  htt_tx.c  hw.c  hw.h  idr.h  linux_completion.c  linux_completion.h  linux_idr.c  mac.c  mac.h  meson.build  pci.c  pci.h  regd.c  regd.h  regd_common.h  rx_desc.h  sleepqueue.c  sleepqueue.h  swap.c  swap.h  (+8 more)
drivers/net/i40e/: meson.build
drivers/net/ixgbe/: meson.build
examples/: meson.build
examples/bond/: Makefile
examples/cmdline/: Makefile
examples/distributor/: Makefile
examples/eventdev_pipeline_sw_pmd/: Makefile  meson.build
examples/exception_path/: Makefile
examples/helloworld/: Makefile
examples/ip_fragmentation/: Makefile
examples/ip_pipeline/: Makefile  meson.build
examples/ip_reassembly/: Makefile
examples/ipsec-secgw/: Makefile  meson.build
examples/ipv4_multicast/: Makefile
examples/kni/: Makefile  meson.build
examples/l2fwd/: Makefile
examples/l2fwd-cat/: Makefile
examples/l2fwd-crypto/: Makefile
examples/l2fwd-jobstats/: Makefile
examples/l2fwd-keepalive/: Makefile  meson.build
examples/l3fwd/: Makefile
examples/l3fwd-acl/: Makefile
examples/l3fwd-power/: Makefile
examples/l3fwd-vf/: Makefile
examples/link_status_interrupt/: Makefile
examples/load_balancer/: Makefile
examples/multi_process/l2fwd_fork/: Makefile
examples/packet_ordering/: Makefile
examples/ptpclient/: Makefile
examples/qos_meter/: Makefile
examples/qos_sched/: Makefile
examples/rxtx_callbacks/: Makefile
examples/skeleton/: Makefile
examples/tep_termination/: Makefile
examples/timer/: Makefile
examples/vhost/: Makefile
examples/vhost_scsi/: Makefile
examples/vmdq/: Makefile
examples/vmdq_dcb/: Makefile
lib/: meson.build
lib/librte_acl/: meson.build
lib/librte_eal/bsdapp/: meson.build
lib/librte_eal/bsdapp/eal/: meson.build
lib/librte_eal/common/: eal_common_log.c  meson.build
lib/librte_eal/common/arch/x86/: meson.build
lib/librte_eal/common/include/: meson.build  rte_log.h
lib/librte_eal/common/include/arch/x86/: rte_memcpy.h
lib/librte_eal/linuxapp/: meson.build
lib/librte_eal/linuxapp/eal/: meson.build
lib/librte_efd/: meson.build  rte_efd_x86.h
lib/librte_ether/: meson.build  rte_ethdev.c  rte_ethdev.h  rte_ethdev_version.map
lib/librte_eventdev/: meson.build
lib/librte_flow_classify/: meson.build
lib/librte_gro/: meson.build
lib/librte_kni/: rte_kni.c
lib/librte_mbuf/: meson.build  rte_mbuf.h
lib/librte_mempool/: rte_mempool.h
lib/librte_net/: meson.build
lib/librte_power/: meson.build
lib/librte_ring/: meson.build  rte_ring.c  rte_ring.h
lib/librte_sched/: meson.build
lib/librte_security/: meson.build
lib/librte_vhost/: meson.build
lib/librte_wifi/: cfg.c  chan.c  codel.h  codel_impl.h  dev.c  flow_dissector.c  flow_dissector.h  fq.h  fq_impl.h  ht.c  ibss.c  iface.c  meson.build  mlme.c  netdevice.h  rate.c  rte_80211.c  rte_80211.h  rte_cfg80211.h  rte_general.c  rte_general.h  rte_ieee80211.h  rte_ieee80211_i.h  rte_ieee80211_radiotap.h  rte_ieee80211dev.c  rte_ieee80211dev.h  rte_ieee80211regulatory.h  rte_mac80211.h  rte_nl80211.h  rte_rate.h  rte_sta_info.h  rte_types.h  rte_wifi.c  rte_wifi.h  rte_wifi_version.map  scan.c  sta_info.c  status.c  tx.c  util.c  (+2 more)
